--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,3 @@
-#resume-container {
-    margin: auto;
-}
-
-.resume-pic {
-    max-width: 100%;
+body {
+    background: lightgray; /* TODO: pick more pleasing color */
 }
